fixed the spacing and sizes of the videos

--- a/src/style/klimaatjesSection.scss
+++ b/src/style/klimaatjesSection.scss
@@ -3,6 +3,6 @@
     flex-direction: row;
     width: 100vw;
     height: 85vh;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 1rem;
 }
